7-th version of revenue.ipynb Refactor comments.

--- a/revenue.ipynb
+++ b/revenue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -67,12 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# read data\n",
-    "data = pd.read_csv(\"./data/data.csv\",delimiter=\";\")\n",
-    "#print(data)"
+    "data = pd.read_csv(\"./data/data.csv\",delimiter=\";\")\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -83,15 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# splitting data into two dataframes by column AB_Cohort\n",
-    "# Разделение данных на два DataFrame по значению столбца \"AB_Cohort\"\n",
     "data_cohort_A = data[data['AB_Cohort'] == 'A']\n",
     "data_cohort_B = data[data['AB_Cohort'] == 'B']\n",
     "\n",
-    "# Сохранение двух DataFrame в файлы CSV\n",
+    "# Saving two DataFrames to CSV files\n",
     "data_cohort_A.to_csv(\"./data_proc/data_cohort_A.csv\", index=False)\n",
     "data_cohort_B.to_csv(\"./data_proc/data_cohort_B.csv\", index=False)"
    ],
@@ -104,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -112,7 +110,7 @@
      "text": [
       "Stored 'avg_revenue_cohort_A_all_users_by_day' (DataFrame)\n",
       "Stored 'avg_revenue_cohort_B_all_users_by_day' (DataFrame)\n",
-      "Средний доход для кагорты A для всех пользователей по дням:    Retention  SumRevenue\n",
+      "Average income for cohort A for all users by day:    Retention  SumRevenue\n",
       "0          0    0.775075\n",
       "1          1    0.601936\n",
       "2          2    0.555142\n",
@@ -121,8 +119,8 @@
       "5          5    0.098973\n",
       "6          6    0.717817\n",
       "7          7    0.852083\n",
-      "Средний доход для кагорты A для всех пользователей за 7 дней: 1.8707451701931923\n",
-      "Средний доход для кагорты B для всех пользователей по дням:    Retention  SumRevenue\n",
+      "Average income for cohort A for all users over 7 days: 1.8707451701931923\n",
+      "Average income for cohort B for all users by day:    Retention  SumRevenue\n",
       "0          0    1.557305\n",
       "1          1    2.580608\n",
       "2          2    1.827910\n",
@@ -131,8 +129,8 @@
       "5          5    0.182432\n",
       "6          6    2.913219\n",
       "7          7    4.058952\n",
-      "Средний доход для кагорты B для всех пользователей за 7 дней: 5.829993089149966\n",
-      "Средний доход для кагорты A для пользователей с покупками по дням:    Retention  SumRevenue\n",
+      "Average income for cohort B for all users over 7 days: 5.829993089149966\n",
+      "Average income for cohort A for users with daily purchases:    Retention  SumRevenue\n",
       "0          0  304.181818\n",
       "1          1  142.142857\n",
       "2          2  124.166667\n",
@@ -141,8 +139,8 @@
       "5          5  106.000000\n",
       "6          6  348.500000\n",
       "7          7  272.666667\n",
-      "Средний доход для кагорты A для пользователей с покупками за 7 дней: 325.36\n",
-      "Средний доход для кагорты B для пользователей с покупками по дням:    Retention  SumRevenue\n",
+      "Average income for cohort A for users with purchases in 7 days: 325.36\n",
+      "Average income for cohort B for users with daily purchases:    Retention  SumRevenue\n",
       "0          0  336.300000\n",
       "1          1  562.250000\n",
       "2          2  632.000000\n",
@@ -151,30 +149,30 @@
       "5          5  189.000000\n",
       "6          6  721.750000\n",
       "7          7  531.142857\n",
-      "Средний доход для кагорты B для пользователей с покупками за 7 дней: 723.0857142857143\n"
+      "Average income for cohort B for users with purchases in 7 days: 723.0857142857143\n"
      ]
     }
    ],
    "source": [
-    "# Функция для вычисления среднего дохода на пользователя по дням\n",
+    "#Function to calculate average revenue per user by day\n",
     "def calculate_avg_revenue(data, filter_by_purchase=False):\n",
     "    if filter_by_purchase:\n",
     "        data = data[data['CountBuy'] > 0]\n",
     "\n",
-    "    # Группируем данные по Retention, User_id, затем вычисляем сумму revenue по каждому пользователю в каждый день\n",
+    "    # We group the data by Retention, User_id, then calculate the amount of revenue for each user on each day\n",
     "    revenue_by_user_day = data.groupby(['Retention', 'User_id'])['SumRevenue'].sum().reset_index()\n",
     "\n",
-    "    # Вычисляем средний доход по пользователям за день\n",
+    "    # We calculate the average income by users per day\n",
     "    avg_revenue_by_user_day = revenue_by_user_day.groupby(['Retention'])['SumRevenue'].mean().reset_index()\n",
     "\n",
-    "    # Вычисляем средний доход за все дни\n",
+    "    # We calculate the average income for all days\n",
     "    revenue_by_user = data.groupby('User_id')['SumRevenue'].sum().reset_index()\n",
     "    avg_revenue_all_days = revenue_by_user['SumRevenue'].mean()\n",
     "\n",
     "\n",
     "    return avg_revenue_by_user_day, avg_revenue_all_days\n",
     "\n",
-    "# Вычисляем средний доход для всех пользователей\n",
+    "# We calculate the average income for all users\n",
     "avg_revenue_cohort_A_all_users_by_day,avg_revenue_cohort_A_all_users = calculate_avg_revenue(data_cohort_A)\n",
     "\n",
     "%store avg_revenue_cohort_A_all_users_by_day\n",
@@ -183,18 +181,18 @@
     "\n",
     "%store avg_revenue_cohort_B_all_users_by_day\n",
     "\n",
-    "# Вычисляем средний доход для пользователей с покупками\n",
+    "# We calculate the average income for users with purchases\n",
     "avg_revenue_cohort_A_purchase_users_by_day,avg_revenue_cohort_A_purchase_users = calculate_avg_revenue(data_cohort_A, filter_by_purchase=True)\n",
     "avg_revenue_cohort_B_purchase_users_by_day,avg_revenue_cohort_B_purchase_users = calculate_avg_revenue(data_cohort_B, filter_by_purchase=True)\n",
     "\n",
-    "print(\"Средний доход для кагорты A для всех пользователей по дням:\",avg_revenue_cohort_A_all_users_by_day)\n",
-    "print(\"Средний доход для кагорты A для всех пользователей за 7 дней:\",avg_revenue_cohort_A_all_users)\n",
-    "print(\"Средний доход для кагорты B для всех пользователей по дням:\",avg_revenue_cohort_B_all_users_by_day)\n",
-    "print(\"Средний доход для кагорты B для всех пользователей за 7 дней:\",avg_revenue_cohort_B_all_users)\n",
-    "print(\"Средний доход для кагорты A для пользователей с покупками по дням:\",avg_revenue_cohort_A_purchase_users_by_day)\n",
-    "print(\"Средний доход для кагорты A для пользователей с покупками за 7 дней:\",avg_revenue_cohort_A_purchase_users)\n",
-    "print(\"Средний доход для кагорты B для пользователей с покупками по дням:\",avg_revenue_cohort_B_purchase_users_by_day)\n",
-    "print(\"Средний доход для кагорты B для пользователей с покупками за 7 дней:\",avg_revenue_cohort_B_purchase_users)\n"
+    "print(\"Average income for cohort A for all users by day:\",avg_revenue_cohort_A_all_users_by_day)\n",
+    "print(\"Average income for cohort A for all users over 7 days:\",avg_revenue_cohort_A_all_users)\n",
+    "print(\"Average income for cohort B for all users by day:\",avg_revenue_cohort_B_all_users_by_day)\n",
+    "print(\"Average income for cohort B for all users over 7 days:\",avg_revenue_cohort_B_all_users)\n",
+    "print(\"Average income for cohort A for users with daily purchases:\",avg_revenue_cohort_A_purchase_users_by_day)\n",
+    "print(\"Average income for cohort A for users with purchases in 7 days:\",avg_revenue_cohort_A_purchase_users)\n",
+    "print(\"Average income for cohort B for users with daily purchases:\",avg_revenue_cohort_B_purchase_users_by_day)\n",
+    "print(\"Average income for cohort B for users with purchases in 7 days:\",avg_revenue_cohort_B_purchase_users)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
@@ -234,7 +232,6 @@
    ],
    "source": [
     "#1.2 Average revenue per user\n",
-    "# Данные\n",
     "days = np.arange(0, 8)  # 7 дней\n",
     "\n",
     "revenue_data_7_days = [avg_revenue_cohort_A_all_users, avg_revenue_cohort_B_all_users,\n",
@@ -242,7 +239,7 @@
     "\n",
     "labels_7_days = ['Cohort A (All Users)', 'Cohort B (All Users)', 'Cohort A (Purchase Users)', 'Cohort B (Purchase Users)']\n",
     "\n",
-    "# Создание гистограммы для данных \"за 7 дней\" с логарифмической шкалой\n",
+    "# Create a histogram for 7-day data with a logarithmic scale\n",
     "plt.figure(figsize=(12, 8))\n",
     "bars = plt.bar(labels_7_days, revenue_data_7_days, color=['blue', 'green', 'red', 'purple'])\n",
     "plt.title('Average Revenue for 7 Days')\n",
@@ -251,19 +248,19 @@
     "plt.xticks(rotation=45)\n",
     "plt.yscale('log')  # Добавление логарифмической шкалы\n",
     "\n",
-    "# Добавление значений величин внутрь столбцов\n",
+    "# Adding Quantity Values Inside Columns\n",
     "for bar, revenue in zip(bars, revenue_data_7_days):\n",
     "    plt.text(bar.get_x() + bar.get_width() / 2 - 0.15, revenue, f'{revenue:.2f}', ha='center', va='bottom', fontsize=10)\n",
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Данные для графика изменения среднего дохода на пользователя по дням\n",
+    "# Data for the graph of changes in average revenue per user by day\n",
     "revenue_data_per_day_A_all_users = avg_revenue_cohort_A_all_users_by_day['SumRevenue']\n",
     "revenue_data_per_day_B_all_users = avg_revenue_cohort_B_all_users_by_day['SumRevenue']\n",
     "revenue_data_per_day_A_purchase_users = avg_revenue_cohort_A_purchase_users_by_day['SumRevenue']\n",
     "revenue_data_per_day_B_purchase_users = avg_revenue_cohort_B_purchase_users_by_day['SumRevenue']\n",
     "\n",
-    "# Создание графика изменения среднего дохода на пользователя по дням для \"All Users\"\n",
+    "# Creating a graph of changes in average revenue per user by day for \"All Users\"\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(days, revenue_data_per_day_A_all_users, marker='o', label='Cohort A (All Users)')\n",
     "plt.plot(days, revenue_data_per_day_B_all_users, marker='o', label='Cohort B (All Users)')\n",
@@ -274,14 +271,14 @@
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Добавление значений величин рядом с точками данных для Cohort A и Cohort B - All Users\n",
+    "# Adding Quantity Values Next to Data Points for Cohort A and Cohort B - All Users\n",
     "for day, revenue_A_all, revenue_B_all in zip(\n",
     "    days, revenue_data_per_day_A_all_users, revenue_data_per_day_B_all_users\n",
     "):\n",
     "    plt.annotate(f'{revenue_A_all:.2f}', (day, revenue_A_all), textcoords=\"offset points\", xytext=(0, 10), ha='center', va='bottom', fontsize=10)\n",
     "    plt.annotate(f'{revenue_B_all:.2f}', (day, revenue_B_all), textcoords=\"offset points\", xytext=(0, 10), ha='center', va='bottom', fontsize=10)\n",
     "\n",
-    "# Создание графика изменения среднего дохода на пользователя по дням для \"Purchase Users\" (если есть данные)\n",
+    "# Creating a graph of changes in average revenue per user by day for \"Purchase Users\" (if data is available)\n",
     "if 'avg_revenue_cohort_A_purchase_users_by_day' in locals() and 'avg_revenue_cohort_B_purchase_users_by_day' in locals():\n",
     "    plt.figure(figsize=(12, 10))\n",
     "    plt.plot(days, revenue_data_per_day_A_purchase_users, marker='o', label='Cohort A (Purchase Users)')\n",
@@ -293,7 +290,7 @@
     "    plt.grid(True)\n",
     "    plt.tight_layout()\n",
     "\n",
-    "    # Добавление значений величин рядом с точками данных для Cohort A и Cohort B - Purchase Users\n",
+    "    # Adding Quantity Values Next to Data Points for Cohort A and Cohort B - Purchase Users\n",
     "    for day, revenue_A_purchase, revenue_B_purchase in zip(\n",
     "        days, revenue_data_per_day_A_purchase_users, revenue_data_per_day_B_purchase_users\n",
     "    ):\n",
@@ -311,21 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "#2.1 LTV\n",
     "ltv_A_all_users_7_days = (\n",
-    "    float(avg_revenue_cohort_A_all_users) *  # Суммируем среднюю выручку за 7 дней\n",
-    "    retention_cohort_A_all_df[\"Retention Rate (%)\"][7] /                      # Здесь [7] - это день 7\n",
-    "    retention_cohort_A_all_df[\"Churn Rate (%)\"][7]                           # Здесь [7] - это день 7\n",
+    "    float(avg_revenue_cohort_A_all_users) *\n",
+    "    retention_cohort_A_all_df[\"Retention Rate (%)\"][7] /\n",
+    "    retention_cohort_A_all_df[\"Churn Rate (%)\"][7]\n",
     ")\n",
     "\n",
-    "# Рассчитайте суммарный LTV за 7 дней для когорты B (все пользователи)\n",
     "ltv_B_all_users_7_days = (\n",
-    "    float(avg_revenue_cohort_B_all_users) *  # Суммируем среднюю выручку за 7 дней\n",
-    "    retention_cohort_B_all_df[\"Retention Rate (%)\"][7] /                      # Здесь [7] - это день 7\n",
-    "    retention_cohort_B_all_df[\"Churn Rate (%)\"][7]                           # Здесь [7] - это день 7\n",
+    "    float(avg_revenue_cohort_B_all_users) *\n",
+    "    retention_cohort_B_all_df[\"Retention Rate (%)\"][7] /\n",
+    "    retention_cohort_B_all_df[\"Churn Rate (%)\"][7]\n",
     ")\n",
     "\n"
    ],
@@ -338,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
@@ -351,7 +347,7 @@
    ],
    "source": [
     "#2.2 LTV graph\n",
-    "# Создайте гистограмму LTV для когорт A и B (все пользователи) за 7 дней\n",
+    "# Create an LTV histogram for cohorts A and B (all users) over 7 days\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.bar(['Cohort A (All Users)', 'Cohort B (All Users)'], [ltv_A_all_users_7_days, ltv_B_all_users_7_days])\n",
     "plt.title('LTV for All Users (7 Days)')\n",
@@ -369,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -381,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -393,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -405,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -417,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -429,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -441,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -453,7 +449,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
