update comments in activity.ipynb

--- a/activity.ipynb
+++ b/activity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 193,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 194,
    "outputs": [],
    "source": [
     "# read data\n",
@@ -33,23 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 195,
    "outputs": [],
    "source": [
     "import warnings\n",
     "\n",
-    "# Заглушаем предупреждения\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# splitting data into two dataframes by column AB_Cohort\n",
     "data_cohort_A = data[data['AB_Cohort'] == 'A']\n",
     "data_cohort_B = data[data['AB_Cohort'] == 'B']\n",
     "\n",
-    "# Создадим множество User_id, где каждый User_id будет только один раз\n",
+    "# Let's create a set of User_ids, where each User_id will appear only once\n",
     "unique_user_ids_A = set(data_cohort_A['User_id'])\n",
     "unique_user_ids_B = set(data_cohort_B['User_id'])\n",
     "\n",
-    "# Пройдемся по множествам User_id и установим Paying в True, если хотя бы одна запись имеет 'CountBuy' > 0\n",
+    "# Let's go through the User_id sets and set Paying to True if at least one entry has 'CountBuy' > 0\n",
     "for user_id in unique_user_ids_A:\n",
     "    has_purchase = any(data_cohort_A[data_cohort_A['User_id'] == user_id]['CountBuy'] > 0)\n",
     "    data_cohort_A.loc[data_cohort_A['User_id'] == user_id, 'Paying'] = has_purchase\n",
@@ -58,14 +57,14 @@
     "    has_purchase = any(data_cohort_B[data_cohort_B['User_id'] == user_id]['CountBuy'] > 0)\n",
     "    data_cohort_B.loc[data_cohort_B['User_id'] == user_id, 'Paying'] = has_purchase\n",
     "\n",
-    "# Если Paying не был установлен для некоторых User_id, заполним значения False\n",
+    "# If Paying has not been set for some User_id, fill in the values ​​with False\n",
     "data_cohort_A['Paying'].fillna(False, inplace=True)\n",
     "data_cohort_B['Paying'].fillna(False, inplace=True)\n",
     "\n",
-    "# Сохранение двух DataFrame в файлы CSV\n",
+    "# Saving two DataFrames to CSV files\n",
     "data_cohort_A.to_csv(\"./data_proc/data_cohort_A.csv\", index=False)\n",
     "data_cohort_B.to_csv(\"./data_proc/data_cohort_B.csv\", index=False)\n",
-    "# После выполнения кода с предупреждениями можно их восстановить\n",
+    "\n",
     "warnings.filterwarnings(\"default\")"
    ],
    "metadata": {
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 196,
    "outputs": [
     {
      "name": "stdout",
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 197,
    "outputs": [
     {
      "name": "stdout",
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 198,
    "outputs": [
     {
      "data": {
@@ -252,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 199,
    "outputs": [
     {
      "data": {
@@ -295,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 200,
    "outputs": [
     {
      "name": "stdout",
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 201,
    "outputs": [
     {
      "name": "stdout",
@@ -435,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 202,
    "outputs": [
     {
      "data": {
@@ -579,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 203,
    "outputs": [
     {
      "name": "stdout",
@@ -653,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 204,
    "outputs": [
     {
      "data": {
@@ -707,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 205,
    "outputs": [
     {
      "data": {
@@ -757,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 206,
    "outputs": [
     {
      "name": "stdout",
@@ -934,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 207,
    "outputs": [
     {
      "data": {
@@ -1030,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [
     {
      "data": {
@@ -1118,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1130,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1142,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1154,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1166,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1178,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1190,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1202,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1214,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1226,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1238,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1250,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1262,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1274,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1286,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1298,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1310,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1322,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1334,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1346,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1358,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1370,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1382,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1394,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1406,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1418,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -1430,7 +1429,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 208,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
    "outputs": [],
    "source": [],
    "metadata": {
